--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ click==8.1.7
 Flask==3.0.1
 Flask-Cors==4.0.0
 googlemaps==4.10.0
+gunicorn==21.2.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.3
+packaging==23.2
 redis==5.0.1
 requests==2.31.0
 six==1.16.0
