--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .venv
 auth.txt
 .cache
-/app/__pycache__/*
-/app/classes/__pycache__/*
+/app/__pycache__/
+/app/classes/__pycache__/
 .spotipyoauthcache
